--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
-# Base URL para imágenes en desarrollo
+# Base URL para im\u00c3\u00a1genes en desarrollo
 especializacion.url.base-imagenes=http://localhost:8000
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_cs
-spring.datasource.username=user_anderson
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_espe
+spring.datasource.username=user_admin
+spring.datasource.password=123456
 
 # Rutas locales
 especializacion.ruta.imagenes=C:/especializacion/imagenes
