Adicion de DtoActualizar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,12 +32,12 @@ spring.profiles.active=dev,security-enabled
 # spring.profiles.active=prod,security-enabled
 
 
-# Configuración de SMS
+# Configuraci\u00c3\u00b3n de SMS
 smspropio.api.url=https://www.smspropio.co/api
 smspropio.api.key=*************************************************
 
 
-# Configuración del servidor de correo:
+# Configuraci\u00c3\u00b3n del servidor de correo:
 app.mail.from-name=Nombre correo
 spring.mail.host=mail.unimag.com
 spring.mail.port=587
@@ -47,5 +47,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-# Exponer la carpeta de las imágenes
+# Exponer la carpeta de las im\u00c3\u00a1genes
 spring.web.resources.static-locations=file:${especializacion.ruta.imagenes-vacantes}/
